# llmir

./: 404.html  LICENSE  README.md  chunks.py  index.html  messages.py  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml  publish.yml  typecheck.yml
api/chunks/: index.html
api/messages/: index.html
api/rich/: index.html
api/roles/: index.html
api/tools/: index.html
docs/: index.md
docs/api/: .pages  chunks.md  messages.md  rich.md  roles.md  tools.md
llm_ir/: __init__.py  chunks.py  rich_repr.py  tools.py
llm_ir/adapter/: __init__.py  openai.py
llmir/: __init__.py  chunks.py  messages.py
llmir/adapter/: __init__.py  openai.py
search/: search_index.json
src/llmir/: __init__.py  chunks.py  messages.py  roles.py  tools.py
src/llmir/adapter/: __init__.py  base.py  ollama.py  openai.py
