[project]
name = "llm-ir"
version = "0.0.10"
description = "Core message IR for LLM pipelines"
authors = [{ name="Mathis Siebert" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "llm_ir",
  "llm_ir.adapter",
]

