[project]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

name = "llmir"
version = "0.0.16"
description = "Core message and tool IR for LLM pipelines"
authors = [{ name="Mathis Siebert" }]
readme = "README.md"
license-files = [
    "LICENSE"
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
  "pyright",
  "pytest",
  "coverage"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-awesome-pages-plugin",
]

[project.urls]
Homepage = "https://github.com/mathisxy/llmir"
Documentation = "https://mathisxy.github.io/llmir/"
Repository = "https://github.com/mathisxy/llmir"
Issues = "https://github.com/mathisxy/llmir/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"